# SpotifyAPITesting

./: CMakeLists.txt  README.md
include/: spotify_api.h
src/: spotify_api.cpp
tests/: test_spotify_api.cpp
